# software-environment-creation

./: .gitignore  README.md
cmake/: commands_to_run.txt
cmake/development-environment/: CMakeLists.txt  CMakePresets.json
cmake/development-environment/avr32/: CMakeLists.txt
cmake/development-environment/src/: delete-me.txt
cmake/development-environment/tests/: test_main.cpp
cmake/hello_world/: .clang-format  CMakeLists.txt  CMakePresets.json
cmake/hello_world/src/: CMakeLists.txt
cmake/hello_world/tests/: CMakeLists.txt  test_print_hello_world.cpp
microchip-studio-ide/: ide-build-output.txt
microchip-studio-ide/executable/: ide-build-output.txt
microchip-studio-ide/executable/hello_world/hello_world/: hello_world.cproj  main.c
microchip-studio-ide/hello_world/hello_world/: hello_world.cproj
microchip-studio-ide/static-library/: ide-build-output.txt
microchip-studio-ide/static-library/hello_world/hello_world/: hello_world.cproj
